--- a/Aula 5/index.html
+++ b/Aula 5/index.html
@@ -12,8 +12,12 @@
     <div>
         <label for="input1">Give me your best:</label>
         <input type="text" id="input1">
-        <button onclick="checkInput()">Touch me!</button>
-        <p id="result"></p>
+        <button onclick="checkInput()">Touch me!</button><br>
+        <label for="input2">Give me your best:</label>
+        <input type="text" id="input2">
+        <div id="result">
+        </div>
+
     </div>
     
     <script src="main.js"></script>
