--- a/Aula 6/ex1.html
+++ b/Aula 6/ex1.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Aula 6 - Exercicio 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
+
+    <label for="input1">Give me your best:</label>
+    <input type="text" id="input1">
+    <button onclick="checkInput()">Touch me!</button><br>
+    <div id="result"></div>
     
+    <script src="js/main.js"></script>
 </body>
 </html>
