--- a/Aula 7/ex1.html
+++ b/Aula 7/ex1.html
@@ -1,5 +1,4 @@
 <!--Colocar os desafios com bootstrap.-->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,9 +7,16 @@
     <title>Aula 7 - Exercicio 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="js/ex1.js"></script>
+    
 </head>
 <body>
+    <h1>Hey Naugthy!</h1>
+    <br>
+    <div id="target" style="height:20px; background-color:aqua;"></div>
+    <br>
+    <div class="conteudo"></div>
     
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/ex1.js"></script>
 </body>
 </html>
