--- a/Aula 7/ex2.html
+++ b/Aula 7/ex2.html
@@ -18,7 +18,22 @@
     <button onclick="userClick()">Submit</button>
     <p id="result">Give me the number of students in this class!</p>
 
-    
+    <div class="container">
+      <div class="row">
+        <table class="table">
+            <thead>
+              <tr id="tableHead">
+
+              </tr>
+            </thead>
+            <tbody id="tableBody">
+
+            </tbody>
+        </table>
+      </div>
+    </div>
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
