--- a/Aula 8/ex1.html
+++ b/Aula 8/ex1.html
@@ -13,11 +13,12 @@
     </div>
     <label for=""></label>
     <input type="text" name="" id="">
-    
+
     <button onclick="main()">Let's see!</button>
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/data.js"></script>
     <script src="js/ex1.js"></script>
 </body>
 </html>
