--- a/Aula 10/ex2.html
+++ b/Aula 10/ex2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
+
 <body>
-    
-    
+    <label for="iptNome">Nome:</label>
+    <input type="text" name="" id="iptNome" autofocus><br>
+    <label for="iptMenu">Menu:</label>
+    <input type="text" name="" id="iptMenu" autofocus><br>
+    <label for="iptExtra">Extra:</label>
+    <input type="text" name="" id="iptExtra" autofocus><br>
+    <button id="btnAdicionar">ADICIONAR</button>
+
+    <table class="table">
+        <thead>
+            <tr id="tableHead">
+
+            </tr>
+        </thead>
+        <tbody id="tableBody">
+
+        </tbody>
+    </table>
+    </div>
+
+    <button id="btnFaturar">FATURAR</button>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="js/data.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/ex2.js"></script>
+    <script src="js/class.js"></script>
+    <script src="js/tableInit.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
