--- a/Aula 11/Aula11ex1.html
+++ b/Aula 11/Aula11ex1.html
@@ -21,7 +21,7 @@
     </ul>
 
     <label for="sel1">Select list:</label>
-    <select class="form-control" id="sel1">
+    <select class="selectpicker" id="sel1">
         <option>Mostrar todos</option>
         <option>Pedidos especiais</option>
         <option>Sem pedidos especiais</option>       
