--- a/Aula 13/index.html
+++ b/Aula 13/index.html
@@ -43,6 +43,7 @@
         crossorigin="anonymous"></script>
     <!-- Optional JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/class.js"></script>
     <script src="js/data.js"></script>
 
 </body>
