--- a/Aula 13/index.html
+++ b/Aula 13/index.html
@@ -32,6 +32,7 @@
                 <button class="btn btn-dark"><i class="far fa-frown"></i></button>
                 <button class="btn btn-danger"><i class="fas fa-heart"></i></button>
             </div>
+            <a href="">more info</a>
         </div>
     </div>
 
