--- a/Aula 13/index.html
+++ b/Aula 13/index.html
@@ -29,8 +29,8 @@
             <h5 class="card-title">Book title</h5>
             <p class="card-text">Book description</p>
             <div class="card-buttons text-center">
-                <button class="btn btn-dark"><i class="far fa-frown"></i></button>
-                <button class="btn btn-danger"><i class="fas fa-heart"></i></button>
+                <button onclick="dislike()" class="btn btn-dark"><i class="far fa-frown"></i></button>
+                <button onclick="like()" class="btn btn-danger"><i class="fas fa-heart"></i></button>
             </div>
             <a href="">more info</a>
         </div>
