--- a/Linder/index.html
+++ b/Linder/index.html
@@ -19,11 +19,60 @@
 
 <body>
 
+    <!-- CARDS STACK -->
     <div class="container">
         <div class="row">
-
-            <div class="col-lg-12">
-                <div id="stackOne" class="card mx-auto text-center active" style="width: 18rem;">
+            <div class="mx-auto groupStack">
+                <div id="stackOne" class="card text-center active" style="width: 18rem;">
+                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
+                        alt="Card image cap" style="width:12rem; height: 18rem;">
+                    <div class="buttons">
+                        <ul class="navbar-nav">
+                            <li class="nav-link">
+                                <span class="icon"><i class="fas fa-heart"></i></span>
+                                <span class="icon-text"></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        <hr class="light-100">
+                        <h6 class="card-title">Capas que vendem</h6>
+                        <textarea disabled rows="3" maxlength="120" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content content content...</textarea>
+                        <div class="d-flex">
+                            <div class="p-2"><i class="fas fa-info"></i></div>
+                            <div class="p-2"><i class="fas fa-book"></i></div>
+                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="stackTwo" class="card mx-auto text-center active" style="width: 18rem;">
+                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
+                        alt="Card image cap" style="width:12rem; height: 18rem;">
+                    <div class="buttons">
+                        <ul class="navbar-nav">
+                            <li class="nav-link">
+                                <span class="icon"><i class="fas fa-heart"></i></span>
+                                <span class="icon-text"></span>
+                            </li>
+                            <li class="nav-link">
+                                <span class="icon"><i class="fas fa-times-circle"></i></span>
+                                <span class="icon-text"></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        <hr class="light-100">
+                        <h6 class="card-title">Capas que vendem</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content content content...</p>
+                        <div class="d-flex">
+                            <div class="p-2"><i class="fas fa-info"></i></div>
+                            <div class="p-2"><i class="fas fa-book"></i></div>
+                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="stackThree" class="card mx-auto text-center active" style="width: 18rem;">
                     <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
                         alt="Card image cap" style="width:12rem; height: 18rem;">
                     <div class="buttons">
@@ -51,67 +100,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div id="stackTwo" class="card text-center active" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
-                        alt="Card image cap" style="width:12rem; height: 18rem;">
-                    <div class="buttons">
-                        <ul class="navbar-nav">
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-heart"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-times-circle"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <hr class="light-100">
-                        <h6 class="card-title">Capas que vendem</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content content content...</p>
-                        <div class="d-flex">
-                            <div class="p-2"><i class="fas fa-info"></i></div>
-                            <div class="p-2"><i class="fas fa-book"></i></div>
-                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
-                        </div>
-                    </div>
-                </div>
-                <div id="stackThree" class="card text-center active" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
-                        alt="Card image cap" style="width:12rem; height: 18rem;">
-                    <div class="buttons">
-                        <ul class="navbar-nav">
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-heart"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-times-circle"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <hr class="light-100">
-                        <h6 class="card-title">Capas que vendem</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content content content...</p>
-                        <div class="d-flex">
-                            <div class="p-2"><i class="fas fa-info"></i></div>
-                            <div class="p-2"><i class="fas fa-book"></i></div>
-                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 mx-auto">
-                    <button type="button" class="btn btn-warning btn-circle btn-lg"><i class="fas fa-times"></i></button>
-                    <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fas fa-heart"></i></button>
-                </div>
         </div>
+    </div>
+
+    <!-- CONTROLS -->
+    <div class="col-lg-4 col-md-4 col-sm-4 col- text-center mx-auto controls">
+        <button type="button" class="btn btn-warning btn-circle btn-lg"><i class="fas fa-times"></i></button>
+        <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fas fa-heart"></i></button>
     </div>
 
 
@@ -124,6 +119,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <!-- Optional JavaScript -->
+    <script src="js/main.js"></script>
+    <script src="js/classBook.js"></script>
+    <script src="js/data.js"></script>
+    
+
 
 </body>
 
