--- a/Linder/index.html
+++ b/Linder/index.html
@@ -18,13 +18,14 @@
 </head>
 
 <body>
-
     <!-- CARDS STACK -->
     <div class="container">
         <div class="row">
+            <!-- Group Cards -->
             <div class="mx-auto groupStack">
-                <div id="stackOne" class="card text-center active" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
+                <!-- Card one -->
+                <div id="stackOne" class="card text-center" style="width: 18rem;">
+                    <img class="card-img-top mx-auto" src=""
                         alt="Card image cap" style="width:12rem; height: 18rem;">
                     <div class="buttons">
                         <ul class="navbar-nav">
@@ -36,8 +37,8 @@
                     </div>
                     <div class="card-body">
                         <hr class="light-100">
-                        <h6 class="card-title">Capas que vendem</h6>
-                        <textarea disabled rows="3" maxlength="120" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content content content...</textarea>
+                        <h6 class="card-title"></h6>
+                        <P class="card-text"></P>
                         <div class="d-flex">
                             <div class="p-2"><i class="fas fa-info"></i></div>
                             <div class="p-2"><i class="fas fa-book"></i></div>
@@ -45,8 +46,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="stackTwo" class="card mx-auto text-center active" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
+                <!-- Card Two -->
+                <div id="stackTwo" class="card mx-auto text-center" style="width: 18rem;">
+                    <img class="card-img-top mx-auto" src=""
                         alt="Card image cap" style="width:12rem; height: 18rem;">
                     <div class="buttons">
                         <ul class="navbar-nav">
@@ -62,9 +64,8 @@
                     </div>
                     <div class="card-body">
                         <hr class="light-100">
-                        <h6 class="card-title">Capas que vendem</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content content content...</p>
+                        <h6 class="card-title"></h6>
+                        <p class="card-text"></p>
                         <div class="d-flex">
                             <div class="p-2"><i class="fas fa-info"></i></div>
                             <div class="p-2"><i class="fas fa-book"></i></div>
@@ -72,8 +73,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="stackThree" class="card mx-auto text-center active" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src="https://images-na.ssl-images-amazon.com/images/I/51Ya2eTZVPL.jpg"
+                <!-- Card Three -->
+                <div id="stackThree" class="card mx-auto text-center" style="width: 18rem;">
+                    <img class="card-img-top mx-auto" src=""
                         alt="Card image cap" style="width:12rem; height: 18rem;">
                     <div class="buttons">
                         <ul class="navbar-nav">
@@ -89,9 +91,8 @@
                     </div>
                     <div class="card-body">
                         <hr class="light-100">
-                        <h6 class="card-title">Capas que vendem</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content content content...</p>
+                        <h6 class="card-title"></h6>
+                        <p class="card-text"></p>
                         <div class="d-flex">
                             <div class="p-2"><i class="fas fa-info"></i></div>
                             <div class="p-2"><i class="fas fa-book"></i></div>
@@ -103,14 +104,11 @@
         </div>
     </div>
 
-    <!-- CONTROLS -->
+    <!-- Controllers -->
     <div class="col-lg-4 col-md-4 col-sm-4 col- text-center mx-auto controls">
         <button type="button" class="btn btn-warning btn-circle btn-lg"><i class="fas fa-times"></i></button>
         <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fas fa-heart"></i></button>
     </div>
-
-
-
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -122,8 +120,6 @@
     <script src="js/main.js"></script>
     <script src="js/classBook.js"></script>
     <script src="js/data.js"></script>
-    
-
 
 </body>
 
