--- a/Linder/index.html
+++ b/Linder/index.html
@@ -18,15 +18,38 @@
 </head>
 
 <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Linder</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <button class="nav-link" onclick="showAPP()" href="">APP<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <button class="nav-link" onclick="showTable()" href="">Liked Books</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
     <!-- CARDS STACK -->
-    <div class="container">
+    <div class="container hideContainer">
         <div class="row">
             <!-- Group Cards -->
             <div class="mx-auto groupStack">
                 <!-- Card one -->
                 <div id="stackOne" class="card text-center" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src=""
-                        alt="Card image cap" style="width:12rem; height: 18rem;">
+                    <img class="card-img-top mx-auto" src="" alt="Card image cap" style="width:12rem; height: 18rem;">
                     <div class="buttons">
                         <ul class="navbar-nav">
                             <li class="nav-link">
@@ -40,74 +63,96 @@
                         <h6 class="card-title"></h6>
                         <P class="card-text"></P>
                         <div class="d-flex">
-                            <div class="p-2"><i class="fas fa-info"></i></div>
-                            <div class="p-2"><i class="fas fa-book"></i></div>
-                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
-                        </div>
+                            <a href="http://" target="_blank" class="infoURL">
+                                <div class="p-2"><i class="fas fa-info"></i>
+                            </a></div>
+                        <a href="http://" target="_blank" class="sampleURL">
+                            <div class="p-2"><i class="fas fa-book"></i>
+                        </a>
                     </div>
-                </div>
-                <!-- Card Two -->
-                <div id="stackTwo" class="card mx-auto text-center" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src=""
-                        alt="Card image cap" style="width:12rem; height: 18rem;">
-                    <div class="buttons">
-                        <ul class="navbar-nav">
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-heart"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-times-circle"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <hr class="light-100">
-                        <h6 class="card-title"></h6>
-                        <p class="card-text"></p>
-                        <div class="d-flex">
-                            <div class="p-2"><i class="fas fa-info"></i></div>
-                            <div class="p-2"><i class="fas fa-book"></i></div>
-                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Card Three -->
-                <div id="stackThree" class="card mx-auto text-center" style="width: 18rem;">
-                    <img class="card-img-top mx-auto" src=""
-                        alt="Card image cap" style="width:12rem; height: 18rem;">
-                    <div class="buttons">
-                        <ul class="navbar-nav">
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-heart"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                            <li class="nav-link">
-                                <span class="icon"><i class="fas fa-times-circle"></i></span>
-                                <span class="icon-text"></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <hr class="light-100">
-                        <h6 class="card-title"></h6>
-                        <p class="card-text"></p>
-                        <div class="d-flex">
-                            <div class="p-2"><i class="fas fa-info"></i></div>
-                            <div class="p-2"><i class="fas fa-book"></i></div>
-                            <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
-                        </div>
-                    </div>
+                    <a href="http://" target="_blank" class="buyURL">
+                        <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Card Two -->
+    <div id="stackTwo" class="card mx-auto text-center" style="width: 18rem;">
+        <img class="card-img-top mx-auto" src="" alt="Card image cap" style="width:12rem; height: 18rem;">
+        <div class="buttons">
+            <ul class="navbar-nav">
+                <li class="nav-link">
+                    <span class="icon"><i class="fas fa-heart"></i></span>
+                    <span class="icon-text"></span>
+                </li>
+                <li class="nav-link">
+                    <span class="icon"><i class="fas fa-times-circle"></i></span>
+                    <span class="icon-text"></span>
+                </li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <hr class="light-100">
+            <h6 class="card-title"></h6>
+            <p class="card-text"></p>
+            <div class="d-flex">
+                <div class="p-2"><i class="fas fa-info"></i></div>
+                <div class="p-2"><i class="fas fa-book"></i></div>
+                <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
+            </div>
+        </div>
+    </div>
+    <!-- Card Three -->
+    <div id="stackThree" class="card mx-auto text-center" style="width: 18rem;">
+        <img class="card-img-top mx-auto" src="" alt="Card image cap" style="width:12rem; height: 18rem;">
+        <div class="buttons">
+            <ul class="navbar-nav">
+                <li class="nav-link">
+                    <span class="icon"><i class="fas fa-heart"></i></span>
+                    <span class="icon-text"></span>
+                </li>
+                <li class="nav-link">
+                    <span class="icon"><i class="fas fa-times-circle"></i></span>
+                    <span class="icon-text"></span>
+                </li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <hr class="light-100">
+            <h6 class="card-title"></h6>
+            <p class="card-text"></p>
+            <div class="d-flex">
+                <div class="p-2"><i class="fas fa-info"></i></div>
+                <div class="p-2"><i class="fas fa-book"></i></div>
+                <div class="ml-auto p-2"><i class="fas fa-shopping-cart"></i></div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
 
     <!-- Controllers -->
     <div class="col-lg-4 col-md-4 col-sm-4 col- text-center mx-auto controls">
-        <button type="button" class="btn btn-warning btn-circle btn-lg"><i class="fas fa-times"></i></button>
-        <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fas fa-heart"></i></button>
+        <button type="button" onclick="dislike()" class="btn btn-warning btn-circle btn-lg"><i class="fas fa-times"></i></button>
+        <button type="button" onclick="like()" class="btn btn-danger btn-circle btn-xl"><i class="fas fa-heart"></i></button>
+    </div>
+
+    <!-- TABLE -->
+    <div class="container tableShow">
+        <table class="table table-sm table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Info Link</th>
+                    <th scope="col">Likes</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -120,6 +165,7 @@
     <script src="js/main.js"></script>
     <script src="js/classBook.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/tableInit.js"></script>
 
 </body>
 
