--- a/WiserStock/index.html
+++ b/WiserStock/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id="wrapper">
+    <div id="wrapper" class="toggled">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
@@ -30,13 +30,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="index.html">Dashboard</a>
                 </li>
                 <li>
-                    <a href="#">Products</a>
+                    <a href="products.html">Products</a>
                 </li>
                 <li>
-                    <a href="#">Shelfs</a>
+                    <a href="shelfs.html">Shelfs</a>
                 </li>
             </ul>
         </div>
@@ -72,7 +72,7 @@
                 e.preventDefault();
                 $("#wrapper").toggleClass("toggled");
             });
-            </script>
+    </script>
     <!-- endScripts ----------------------------------------------------------------------------------------------------->
 
 </body>
