--- a/WiserStock/index.html
+++ b/WiserStock/index.html
@@ -18,12 +18,48 @@
 </head>
 
 <body>
-    
-</body>
+
+    <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px;" id="mySidebar">
+        <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
+        <a href="#" class="w3-bar-item w3-button">Dashboard</a>
+        <a href="#" class="w3-bar-item w3-button">Products</a>
+        <a href="#" class="w3-bar-item w3-button">Shelfs</a>
+    </div>
+
+    <div class="w3-main" style="margin-left:200px">
+        <div class="w3-teal">
+            <button class="w3-button w3-teal w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
+            <div class="w3-container">
+                <h1>My Page</h1>
+            </div>
+        </div>
+
+        <div class="w3-container">
+            <h3>Responsive Sidebar</h3>
+            <p>The sidebar in this example will always be displayed on screens wider than 992px, and hidden on tablets
+                or mobile phones (screens less than 993px wide).</p>
+            <p>On tablets and mobile phones the sidebar is replaced with a menu icon to open the sidebar.</p>
+            <p>The sidebar will overlay of the page content.</p>
+            <p><b>Resize the browser window to see how it works.</b></p>
+        </div>
+
+    </div>
+
+    <script>
+        function w3_open() {
+            document.getElementById("mySidebar").style.display = "block";
+        }
+        function w3_close() {
+            document.getElementById("mySidebar").style.display = "none";
+        }
+    </script>
+
+
+
+
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -31,6 +67,7 @@
 <!-- Optional JavaScript -->
 <script src="js/main.js"></script>
 <!-- endScripts ----------------------------------------------------------------------------------------------------->
+
 
 </body>
 
